Update source for trace file.

--- a/tests/Traces/README
+++ b/tests/Traces/README
@@ -21,7 +21,7 @@ IPSec
 
 OpenVPN
 - [openvpn-tcp-tls-auth.pcap](https://wiki.wireshark.org/SampleCaptures?action=AttachFile&do=get&target=OpenVPN_TCP_tls-auth.pcapng)
-- openvpn.pcap (TODO: link missing)
+- openvpn.pcap (self-made)
 - [openvpn_tcp_nontlsauth.pcap](https://bugs.wireshark.org/bugzilla/attachment.cgi?id=9840)
 - [openvpn_udp_tls-auth.pcap](https://wiki.wireshark.org/SampleCaptures?action=AttachFile&do=get&target=OpenVPN_UDP_tls-auth.pcapng)
 
